# pseye-driver

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  DEPS  README.md
.github/workflows/: build-project.yml
include/pseye/: exception.hpp  log.hpp  pixel_format.hpp
include/pseye/detail/: config.hpp  hardware.hpp
include/pseye/driver/: pseye_device_controller.hpp  pseye_device_controller_ops.hpp  pseye_device_state.hpp  simple_pseye_camera.hpp  spsc_frame_buffer.hpp  usb_context.hpp  usb_transfer_controller.hpp  uvc_frame_processor.hpp
include/pseye/hw/: ov534.hpp  ov7725.hpp
src/: CMakeLists.txt
src/core/: CMakeLists.txt  log.cpp  pixel_format.cpp
src/directshow-filter/: CMakeLists.txt  camera-filter.cpp  camera-filter.hpp  module-guid.hpp  module.cpp  module.hpp  registry.cpp  registry.hpp
src/driver/: CMakeLists.txt  pseye_device_controller.cpp  pseye_device_controller_ops.cpp  pseye_device_state.cpp  simple_pseye_camera.cpp  spsc_frame_buffer.cpp  usb_context.cpp  usb_transfer_controller.cpp  uvc_frame_processor.cpp
